--- a/LunchList/res/layout/activity_main.xml
+++ b/LunchList/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Name:" />
+            android:text="Name:"
+            android:textSize="22sp" />
 
         <EditText
             android:id="@+id/name"
@@ -49,10 +50,12 @@
 
     <Button
         android:id="@+id/save"
+        style="@style/light"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/linearLayout2"
-        android:text="Save" />
+        android:text="Save"
+        android:theme="@style/light" />
 
 </RelativeLayout>
