--- a/LunchList/res/layout/activity_main.xml
+++ b/LunchList/res/layout/activity_main.xml
@@ -1,20 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:stretchColumns="1"
->
-<TableRow>
-<TextView android:text="Name:" />
-<EditText android:id="@+id/name" />
-</TableRow>
-<TableRow>
-<TextView android:text="Address:" />
-<EditText android:id="@+id/addr" />
-</TableRow>
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:stretchColumns="1" >
+
+    <TableRow>
+
+        <TextView android:text="Name:" />
+
+        <EditText android:id="@+id/name" />
+    </TableRow>
+
+    <TableRow
+        android:id="@+id/tableRow2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+    </TableRow>
+
+    <TableRow>
+
+        <TextView android:text="Address:" />
+
+        <EditText android:id="@+id/addr" />
+    </TableRow>
+
+    <TableRow
+        android:id="@+id/tableRow1"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent" >
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Type:" />
+
+            <RadioGroup
+                android:id="@+id/types"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
+
+                <RadioButton
+                    android:id="@+id/take-out"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="true"
+                    android:text="Take-Out" />
+
+                <RadioButton
+                    android:id="@+id/sit-down"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Sit-Down" />
+
+                <RadioButton
+                    android:id="@+id/delivery"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Delivery" />
+            </RadioGroup>
+
+        
+    </TableRow>
+
 <Button android:id="@+id/save"
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:text="Save"
 />
+
+
+
 </TableLayout>
