--- a/LunchList/res/layout/activity_main.xml
+++ b/LunchList/res/layout/activity_main.xml
@@ -41,14 +41,14 @@
                 android:layout_height="wrap_content" >
 
                 <RadioButton
-                    android:id="@+id/take-out"
+                    android:id="@+id/take_out"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="true"
                     android:text="Take-Out" />
 
                 <RadioButton
-                    android:id="@+id/sit-down"
+                    android:id="@+id/sit_down"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Sit-Down" />
