--- a/LunchList/res/layout/activity_main.xml
+++ b/LunchList/res/layout/activity_main.xml
@@ -2,13 +2,10 @@
 <!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">-->
-    <TableLayout
+    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:stretchColumns="1" >
-
-      
-   
 
     <TableRow>
 
@@ -69,17 +66,17 @@
         
     </TableRow>
 
-     <TableRow
+     <!-- <TableRow
         android:id="@+id/tableRow2"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent" > -->
             
 <Button android:id="@+id/save"
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:text="Save"
 />
-</TableRow>
+<!--</TableRow>-->
 
 </TableLayout>
  <!--</ScrollView>-->
