added autocompletetextview per chap 4 extra credit 2 added functionality so that the autocompletetextview was updated for every new address added by the user.

--- a/LunchList/res/layout/activity_main.xml
+++ b/LunchList/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
 
         <TableRow>
             <TextView android:text="Address:" />
-            <EditText android:id="@+id/addr" />
+            <AutoCompleteTextView android:id="@+id/addr" />
         </TableRow>
 
         <TableRow
