--- a/LunchList/res/layout/row_delivery.xml
+++ b/LunchList/res/layout/row_delivery.xml
@@ -6,7 +6,7 @@
         android:padding="4dp" >
 
         <ImageView
-            android:id="@+id/icon3"
+            android:id="@+id/icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ball_green" />
@@ -17,7 +17,7 @@
             android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/title2"
+                android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_gravity="center_vertical"
@@ -27,7 +27,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/address2"
+                android:id="@+id/address"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_gravity="center_vertical"
