--- a/LunchList/res/layout/row_takeout.xml
+++ b/LunchList/res/layout/row_takeout.xml
@@ -5,35 +5,36 @@
         android:orientation="horizontal"
         android:padding="4dp" >
 
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ball_green" />
-
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="210dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/title2"
+                android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:maxLines="1"
                 android:text="TextView" />
 
             <TextView
-                android:id="@+id/address2"
+                android:id="@+id/address"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_gravity="center_vertical"
+                android:layout_gravity="left"
                 android:layout_weight="1"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:text="TextView"
                 android:textStyle="bold" />
         </LinearLayout>
+
+        <ImageView
+            android:id="@+id/icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ball_green" />
 
     </LinearLayout>
