--- a/LunchList/res/layout/activity_main.xml
+++ b/LunchList/res/layout/activity_main.xml
@@ -1,106 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Chris Card | Date:8/28/12 | this is the xml format file for Lunch List  -->
+<!-- Chris Card | Date:8/28/12 | this is the xml format file for Lunch List -->
 <!--
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@android:id/tabhost"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <TableLayout
-        android:id="@+id/details"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:stretchColumns="1" >
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
 
-        <TableRow>
-            <TextView android:text="Name:" />
-            <EditText android:id="@+id/name" />
-        </TableRow>
+        <TabWidget
+            android:id="@android:id/tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-        <TableRow
-            android:id="@+id/tableRow2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-        </TableRow>
-
-        <TableRow>
-            <TextView android:text="Address:" />
-            <AutoCompleteTextView android:id="@+id/addr" />
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/tableRow1"
-            android:layout_width="wrap_content"
+        <FrameLayout
+            android:id="@android:id/tabcontent"
+            android:layout_width="match_parent"
             android:layout_height="match_parent" >
 
-            <TextView
-                android:id="@+id/types_title"
-                android:layout_width="wrap_content"
+            <ListView
+                android:id="@+id/restaurants"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <TableLayout
+                android:id="@+id/details"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Type:" />
+                android:paddingTop="4dip"
+                android:shrinkColumns="1"
+                android:stretchColumns="1" >
 
-            <RadioGroup
-                android:id="@+id/types"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
+                <TableRow>
 
-                <RadioButton
-                    android:id="@+id/take_out"
-                    android:layout_width="wrap_content"
+                    <TextView android:text="Name:" />
+
+                    <EditText android:id="@+id/name" />
+                </TableRow>
+
+                <TableRow>
+
+                    <TextView android:text="Address:" />
+
+                    <EditText android:id="@+id/addr" />
+                </TableRow>
+
+                <TableRow>
+
+                    <TextView android:text="Type:" />
+
+                    <RadioGroup android:id="@+id/types" >
+
+                        <RadioButton
+                            android:id="@+id/take_out"
+                            android:checked="true"
+                            android:text="Take-Out" />
+
+                        <RadioButton
+                            android:id="@+id/sit_down"
+                            android:text="Sit-Down" />
+
+                        <RadioButton
+                            android:id="@+id/delivery"
+                            android:text="Delivery" />
+                    </RadioGroup>
+                </TableRow>
+
+                <Button
+                    android:id="@+id/save"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:checked="true"
-                    android:text="Take-Out" />
+                    android:text="Save" />
+            </TableLayout>
+        </FrameLayout>
+    </LinearLayout>
 
-                <RadioButton
-                    android:id="@+id/sit_down"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Sit-Down" />
-
-                <RadioButton
-                    android:id="@+id/delivery"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Delivery" />
-            </RadioGroup>
-            <!-- End of Radio group for restaurant types -->
-        </TableRow>
-
-        <!--
-        <TableRow
-        android:id="@+id/tableRow2"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent" >
-        -->
-
-        <Button
-            android:id="@+id/save"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Save" />
-        <!-- </TableRow> -->
-
-    </TableLayout>
-    <!-- end of table layout -->
-
-	<!--  
-	<Spinner
-        android:id="@+id/restaurants"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/details"
-        android:layout_alignParentTop="true" />
-        -->
-	
-    <ListView
-        android:id="@+id/restaurants"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/details"
-        android:layout_alignParentTop="true" />
-
-</RelativeLayout> <!-- </ScrollView> -->
+</TabHost>
