--- a/LunchList/res/layout/activity_main.xml
+++ b/LunchList/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
 
                     <TextView android:text="Address:" />
 
-                    <EditText android:id="@+id/addr" />
+                    <AutoCompleteTextView android:id="@+id/addr" />
                 </TableRow>
 
                 <TableRow>
