--- a/LunchList/res/layout/activity_main.xml
+++ b/LunchList/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
 <!--
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent">
 -->
 <TabHost xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/tabhost"
@@ -72,6 +72,11 @@
                             android:text="Delivery" />
                     </RadioGroup>
                 </TableRow>
+                
+                <DatePicker 
+                      android:id="@+id/date"
+                      android:layout_width="match_parent"
+                      android:layout_height="match_parent"/>
 
                 <Button
                     android:id="@+id/save"
