--- a/LunchList/res/layout/activity_main.xml
+++ b/LunchList/res/layout/activity_main.xml
@@ -1,20 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Chris Card | Date:8/28/12 | this is the xml format file for Lunch List -->
-<!--
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
--->
-<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
+
+<!--  <TabHost xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/tabhost"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent" >-->
 
-    <LinearLayout
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical" >
 
+        <LinearLayout 
+            android:layout_width="wrap_content"
+			    android:layout_height="wrap_content">
+			    
+            <Button
+                android:id="@+id/prev"
+                android:text="Prev"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <Button
+                android:id="@+id/next"
+                android:text="Next"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            </LinearLayout>
+        <!--
         <TabWidget
             android:id="@android:id/tabs"
             android:layout_width="match_parent"
@@ -24,7 +37,16 @@
             android:id="@android:id/tabcontent"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
-
+			-->
+			<LinearLayout 
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content">
+			
+			<ViewFlipper 
+			    android:id="@+id/flip"
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content">
+			    
             <ListView
                 android:id="@+id/restaurants"
                 android:layout_width="match_parent"
@@ -84,7 +106,9 @@
                     android:layout_height="wrap_content"
                     android:text="Save" />
             </TableLayout>
-        </FrameLayout>
+            </ViewFlipper>
+            </LinearLayout>
+        <!--</FrameLayout>-->
     </LinearLayout>
 
-</TabHost>
+<!-- </TabHost> -->
