--- a/LunchList/res/layout/activity_main.xml
+++ b/LunchList/res/layout/activity_main.xml
@@ -1,33 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Chris Card | Date:8/28/12 | this is the xml format file for Lunch List -->
 
-<!--  <TabHost xmlns:android="http://schemas.android.com/apk/res/android"
+<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/tabhost"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >-->
+    android:layout_height="match_parent" >
 
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical" >
 
-        <LinearLayout 
-            android:layout_width="wrap_content"
-			    android:layout_height="wrap_content">
-			    
-            <Button
-                android:id="@+id/prev"
-                android:text="Prev"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-            <Button
-                android:id="@+id/next"
-                android:text="Next"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-            </LinearLayout>
-        <!--
+        
         <TabWidget
             android:id="@android:id/tabs"
             android:layout_width="match_parent"
@@ -37,16 +21,8 @@
             android:id="@android:id/tabcontent"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
-			-->
-			<LinearLayout 
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content">
 			
-			<ViewFlipper 
-			    android:id="@+id/flip"
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content">
-			    
+			
             <ListView
                 android:id="@+id/restaurants"
                 android:layout_width="match_parent"
@@ -106,9 +82,7 @@
                     android:layout_height="wrap_content"
                     android:text="Save" />
             </TableLayout>
-            </ViewFlipper>
-            </LinearLayout>
-        <!--</FrameLayout>-->
+        </FrameLayout>
     </LinearLayout>
 
-<!-- </TabHost> -->
+</TabHost>
