--- a/LunchList/res/menu/option.xml
+++ b/LunchList/res/menu/option.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:id="@+id/toast" android:icon="@drawable/toast" android:title="Raise Toast" android:visible="true" android:enabled="true"></item>
-    
+<menu xmlns:android="http://schemas.android.com/apk/res/android" >   
+    <item
+        android:id="@+id/toast"
+        android:title="Raise Toast"
+        android:icon="@drawable/toast"/>
 
 </menu>
