added scroll view the the activity menu so that typing would be easier per chap 7 step 6

--- a/LunchList/res/layout/activity_main.xml
+++ b/LunchList/res/layout/activity_main.xml
@@ -27,6 +27,9 @@
                 android:id="@+id/restaurants"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
+            <ScrollView 
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
             <TableLayout
                 android:id="@+id/details"
@@ -91,6 +94,7 @@
                     android:layout_height="wrap_content"
                     android:text="Save" />
             </TableLayout>
+            </ScrollView>
         </FrameLayout>
     </LinearLayout>
 
