--- a/LunchList/res/layout/row.xml
+++ b/LunchList/res/layout/row.xml
@@ -33,7 +33,8 @@
                 android:layout_weight="1"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textColor="@android:color/white" />
             
         </LinearLayout>
 
