--- a/LunchList/res/menu/option.xml
+++ b/LunchList/res/menu/option.xml
@@ -4,5 +4,10 @@
         android:id="@+id/toast"
         android:title="Raise Toast"
         android:icon="@drawable/toast"/>
+   <!-- Extra Credit -->
+    <item 
+        android:id="@+id/switch_tabs"
+        android:title="Switch tabs"
+        android:icon="@drawable/restaurant"/>
 
 </menu>
