added new item to option menu called run added code to onOptionsItemSelected to check for a click on the new menu item run and starts a thread per chap 8 step 3

--- a/LunchList/res/menu/option.xml
+++ b/LunchList/res/menu/option.xml
@@ -4,10 +4,15 @@
         android:id="@+id/toast"
         android:title="Raise Toast"
         android:icon="@drawable/toast"/>
+    <item
+        android:id="@+id/run"
+        android:title="Run Long Task"
+        android:icon="@drawable/run"/>
    <!-- Extra Credit -->
     <item 
         android:id="@+id/switch_tabs"
         android:title="Switch tabs"
         android:icon="@drawable/restaurant"/>
+    
 
 </menu>
