--- a/LunchList/res/layout-land/activity_main.xml
+++ b/LunchList/res/layout-land/activity_main.xml
@@ -2,8 +2,7 @@
 <TabHost xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/tabhost"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_weight="1" >
+    android:layout_height="match_parent" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,7 +12,7 @@
         <TabWidget
             android:id="@android:id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content" />
 
         <FrameLayout
             android:id="@android:id/tabcontent"
@@ -23,7 +22,7 @@
             <ListView
                 android:id="@+id/restaurants"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="match_parent" />
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -35,10 +34,11 @@
                     android:layout_height="wrap_content"
                     android:paddingTop="4dip"
                     android:stretchColumns="1,3" 
-                    android:shrinkColumns="3"
-                    >
+                    android:shrinkColumns="3">
 
-                    <TableRow>
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
                         <TextView
                             android:paddingRight="2dip"
@@ -58,7 +58,9 @@
                             android:maxWidth="140sp" />
                     </TableRow>
 
-                    <TableRow>
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
                         <TextView android:text="Type:" />
 
