added onsave onclikclistener and added initializations for the access fields of the detail_form.xml per chap 12 step 4

--- a/LunchList/res/layout/detail_form.xml
+++ b/LunchList/res/layout/detail_form.xml
@@ -23,7 +23,7 @@
 
             <TextView android:text="@string/addresstitle" />
 
-            <AutoCompleteTextView android:id="@+id/addr" />
+            <EditText android:id="@+id/addr" />
         </TableRow>
 
         <TableRow>
