--- a/LunchList/res/menu/option.xml
+++ b/LunchList/res/menu/option.xml
@@ -4,4 +4,8 @@
         android:id="@+id/add"
         android:title="Add"
         android:icon="@drawable/ic_menu_add"/>
+    <item
+    	android:id="@+id/prefs"
+    	android:title="Settings"
+    	android:icon="@drawable/ic_menu_preferences"/>
 </menu>
