went through and added comments and made sure that the formating was consistent

--- a/LunchList/res/xml/preferences.xml
+++ b/LunchList/res/xml/preferences.xml
@@ -1,3 +1,4 @@
+<!-- Chris Card | 9/20/2012 | layout for preferences for sorting restaurants -->
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <ListPreference
