--- a/LunchList/res/layout/row.xml
+++ b/LunchList/res/layout/row.xml
@@ -1,4 +1,5 @@
-
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Chris Card | 9/01/2012 | layout for restaurant data in listview -->
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
