--- a/LunchList/res/menu/option.xml
+++ b/LunchList/res/menu/option.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Chris Card | 9/18/2012 | menu for lunchlist main activity -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >   
     <item
         android:id="@+id/add"
