--- a/LunchList/res/values/arrays.xml
+++ b/LunchList/res/values/arrays.xml
@@ -1,4 +1,4 @@
-
+<!-- Chris Card | 9/20/2012 | list of prefrences for sorting lunchlist restaurants -->
     <resources>
         <string-array name="sort_names">
             <item >By Name, Ascending</item>
