-changed detailfor.xml layout and layout-land by removing the button and adding in location textviews -changed detail option menu with compass icon menu option -updated string value xml with new strings -updated detail form to with location textview and save method -per chap 17 step 3

--- a/LunchList/res/layout-land/detail_form.xml
+++ b/LunchList/res/layout-land/detail_form.xml
@@ -67,11 +67,21 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/feedtitle" />
 
-                <Button
-                    android:id="@+id/save"
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/savetitle" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:text="@string/location"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:id="@+id/location"
+                        android:text="@string/not_set"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
             </LinearLayout>
         </TableRow>
     </TableLayout>
