--- a/LunchList/res/layout/detail_form.xml
+++ b/LunchList/res/layout/detail_form.xml
@@ -45,6 +45,12 @@
             </RadioGroup>
         </TableRow>
 
+        <TableRow>
+            <TextView android:text="@string/location"/>
+            <TextView android:id="@+id/location"
+                android:text="@string/not_set"/>
+        </TableRow>
+
         <EditText
             android:id="@+id/notes"
             android:gravity="top"
@@ -57,12 +63,6 @@
         <EditText
             android:id="@+id/feed"
             android:hint="@string/feedtitle" />
-
-        <Button
-            android:id="@+id/save"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/savetitle" />
     </TableLayout>
 
 </ScrollView>
