--- a/LunchList/res/menu/details_option.xml
+++ b/LunchList/res/menu/details_option.xml
@@ -5,4 +5,7 @@
 android:title="RSS Feed"
 android:icon="@drawable/ic_menu_friendslist"
 />
+<item android:id="@+id/location"
+	android:title="Save Location"
+	android:icon="@drawable/ic_menu_compass"/>
 </menu>
