--- a/LunchList/res/menu/details_option.xml
+++ b/LunchList/res/menu/details_option.xml
@@ -8,4 +8,7 @@ android:icon="@drawable/ic_menu_friendslist"
 <item android:id="@+id/location"
 	android:title="Save Location"
 	android:icon="@drawable/ic_menu_compass"/>
+<item android:id="@+id/map"
+	android:title="Show on Map"
+	android:icon="@drawable/ic_menu_mapmode"/>
 </menu>
