--- a/LunchList/res/xml/preferences.xml
+++ b/LunchList/res/xml/preferences.xml
@@ -8,4 +8,14 @@
         android:key="sort_order"
         android:summary="Choose the order the list uses"
         android:title="Sort Order" />
+    <CheckBoxPreference
+    	android:key="alarm"
+    	android:title="Sound a Lunch Alarm"
+    	android:summary="Check if you want to know when it is time for lunch"/>
+    <apt.tutorial.TimePreference
+    	android:key="alarm_time"
+    	android:title="Lunch Alarm Time"
+    	android:defaultValue="12:00"
+    	android:summary="Set your desired time for the lunch alarm"
+    	android:dependency="alarm"/>
 </PreferenceScreen>
