--- a/LunchList/res/xml/preferences.xml
+++ b/LunchList/res/xml/preferences.xml
@@ -12,7 +12,7 @@
     	android:key="alarm"
     	android:title="Sound a Lunch Alarm"
     	android:summary="Check if you want to know when it is time for lunch"/>
-    <apt.tutorial.TimePreference
+    <csci498.ccard.lunchlist.apt.tutorial.TimePreference
     	android:key="alarm_time"
     	android:title="Lunch Alarm Time"
     	android:defaultValue="12:00"
