--- a/LunchList/res/xml/preferences.xml
+++ b/LunchList/res/xml/preferences.xml
@@ -18,4 +18,10 @@
     	android:defaultValue="12:00"
     	android:summary="Set your desired time for the lunch alarm"
     	android:dependency="alarm"/>
+    <CheckBoxPreference
+        android:key="use_notification"
+        android:title="Usa a Notification"
+        android:defaultValue="true"
+        android:summary="Check if you want a status bar icon at lunctime, or uncheck for a full-screen notice"
+        android:dependency="alarm"/>
 </PreferenceScreen>
