--- a/LunchList/res/layout/widget.xml
+++ b/LunchList/res/layout/widget.xml
@@ -21,6 +21,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/icon" />
+        android:src="@drawable/ff" />
 
 </RelativeLayout>
