--- a/LunchList/res/layout/detail_activity.xml
+++ b/LunchList/res/layout/detail_activity.xml
@@ -4,4 +4,4 @@
     android:id="@+id/details"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    class="apt.tutorial.DetailFragment" />
+    class="csci498.ccard.lunchlist.apt.tutorial.DetailFragment" />
