--- a/LunchList/res/menu/option.xml
+++ b/LunchList/res/menu/option.xml
@@ -10,4 +10,8 @@
     	android:id="@+id/prefs"
     	android:title="Settings"
     	android:icon="@drawable/ic_menu_preferences"/>
+    <item 
+    	android:id="@+id/help"
+    	android:title="Help"
+    	android:icon="@drawable/ic_menu_help"/>
 </menu>
