added phone row to layout and layout-land detail_form and added new edit text object in detailform

--- a/LunchList/res/layout/detail_form.xml
+++ b/LunchList/res/layout/detail_form.xml
@@ -25,6 +25,12 @@
         </TableRow>
 
         <TableRow>
+            <TextView android:name="Phone:"/>
+            <EditText android:id="@+id/phone"
+                android:inputType="phone"/>
+        </TableRow>
+
+        <TableRow>
 
             <TextView android:text="@string/typetitle" />
 
