--- a/LunchList/res/layout-land/detail_form.xml
+++ b/LunchList/res/layout-land/detail_form.xml
@@ -29,6 +29,15 @@
         </TableRow>
 
         <TableRow>
+            <TextView
+                android:text="Phone:"/>
+
+            <TextView
+                android:id="@+id/phone"
+                android:layout_span="2"/>
+        </TableRow>
+
+        <TableRow>
 
             <TextView android:text="@string/typetitle" />
 
